kubernetes/applications/pastefy/pastefy-mariadb-db-statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pastefy-mariadb-db
  namespace: pastefy
spec:
  serviceName: pastefy-db-headless
  replicas: 1
  selector:
    matchLabels:
      app: pastefy-db
  template:
    metadata:
      labels:
        app: pastefy-db
    spec:
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      containers:
        - name: mariadb
          image: mariadb:12.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: longhorn
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
