kubernetes/applications/pastefy/pastefy-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pastefy-app
  namespace: pastefy
spec:
  type: ClusterIP
  selector:
    app: pastefy-app
  ports:
    - name: http
      port: 80
      targetPort: 80
