kubernetes/applications/pastefy/pastefy-db-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pastefy-db-headless
  namespace: pastefy
spec:
  clusterIP: None
  selector:
    app: pastefy-db
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
