kubernetes/applications/pastefy/pastefy-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pastefy-ingress
  namespace: pastefy
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: pastefy-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pastefy.example.com
      secretName: pastefy-tls
  rules:
    - host: pastefy.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pastefy-app
                port:
                  number: 80
